<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PaquitoFelizCumple2014</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="opens_youtube_in_browser">opens youtube in browser</string>
    <string name="image_of_vegeta777">image of vegeta777</string>
    <string name="image_of_lyman">image of lyman</string>
    <string name="minecraft_image">minecraft image</string>
    <string name="wiki">Wiki</string>
    <string name="marssy">Marssy</string>
    <string name="lyman">Lyman</string>
    <string name="images">Images</string>
    <string name="tia">Tia</string>
    <string name="tio">Tio</string>
    <string name="image_of_marssy">image of marssy</string>
    <string name="videos">Videos</string>
    <string name="minecraft_cake">minecraft cake</string>
    <string name="annoying_orange_image">annoying orange image</string>
    <string name="gumball_toon_image">gumball toon image</string>
    <string name="v_deos">Vídeos</string>
    <string name="im_genes">imágenes</string>

</resources>
