<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/minecraft3b2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/button1"
        android:background="#C0C0C0"
        android:onClick="openImages"
        android:text="@string/images"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignTop="@+id/imageView2"
        android:contentDescription="@string/image_of_lyman"
        android:onClick="openFlickr"
        android:src="@drawable/lyman" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:background="#c0c0c0"
        android:contentDescription="@string/opens_youtube_in_browser"
        android:onClick="openYouTube"
        android:text="@string/videos"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/image_of_vegeta777"
        android:onClick="openYouTube"
        android:src="@drawable/vegeta777copy" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignTop="@+id/imageView4"
        android:contentDescription="@string/minecraft_cake"
        android:onClick="openCakeVideo"
        android:src="@drawable/minecraftcake" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignTop="@+id/imageView6"
        android:contentDescription="@string/gumball_toon_image"
        android:onClick="openGumball"
        android:src="@drawable/gumball" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="45dp"
        android:layout_toLeftOf="@+id/button1"
        android:contentDescription="@string/minecraft_image"
        android:onClick="openWiki"
        android:src="@drawable/minecraft1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/image_of_marssy"
        android:onClick="openFlickr2"
        android:src="@drawable/marssvader" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="45dp"
        android:layout_toLeftOf="@+id/button1"
        android:contentDescription="@string/annoying_orange_image"
        android:onClick="openOrange"
        android:src="@drawable/orange" />

</RelativeLayout>